# classical_sk_data_scraping

./: .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  build_crawlers_with_codex.py  main.py  pyproject.toml
.codex/: config.toml
agent_utils/: concert_catalog.py  search_db.py
analyzers/: analyze_concert_programs.py  analyze_potential_events.py  get_composers.py  process_composers.py  utils.py
crawlers/: base.py  classical.py  extractors.py  formaters.py
crawlers/auditeorganum_cz/: main.py
crawlers/berg_cz/: main.py
crawlers/ceskafilharmonie_cz/: main.py
crawlers/cultusruzinov_sk/: main.py
crawlers/filharmonia_sk/: main.py  parsers.py
crawlers/goout_net/: main.py
crawlers/hamu_cz/: main.py
crawlers/konvergencie_sk/: main.py
crawlers/kpvh_sk/: main.py
crawlers/kultura_trnava_sk/: main.py
crawlers/nedbalka_sk/: main.py
crawlers/neoklasikorchestr_cz/: main.py
crawlers/pkopresov_sk/: main.py
crawlers/predpredaj_zoznam_sk/: main.py
crawlers/prgphil_cz/: main.py
crawlers/sdke_sk/: main.py
crawlers/sfk_sk/: main.py
crawlers/simachart_weebly_com/: main.py
crawlers/skozilina_sk/: main.py
crawlers/snd_sk/: main.py
crawlers/stateopera_sk/: main.py
crawlers/stvr_sk/: main.py
crawlers/tootoot_fm/: main.py
data/: cities_by_population.csv  cities_with_postal_code.csv
data_scraping.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
db/: models.py
prompts/: analyze_concert_program.mustache  build_crawler.mustache
sql/: backfill_country_code.sql
tests/: test_analyze_concert_programs.py  test_main.py  test_search_db.py
(+53 files in other folders)
